src/mod/ModParser.ts
// Generated from ./src/mod/ModParser.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { ModParserListener } from './ModParserListener';
import { ModParserVisitor } from './ModParserVisitor';


export class ModParser extends Parser {
	public static readonly NULL=1;
	public static readonly IN=2;
	public static readonly Unit=3;
	public static readonly COMBINE_COMPARE=4;
	public static readonly Ellipsis=5;
	public static readonly InterpolationStart=6;
	public static readonly LPAREN=7;
	public static readonly RPAREN=8;
	public static readonly BlockStart=9;
	public static readonly BlockEnd=10;
	public static readonly LBRACK=11;
	public static readonly RBRACK=12;
	public static readonly GT=13;
	public static readonly TIL=14;
	public static readonly LT=15;
	public static readonly COLON=16;
	public static readonly SEMI=17;
	public static readonly COMMA=18;
	public static readonly DOT=19;
	public static readonly DOLLAR=20;
	public static readonly AT=21;
	public static readonly AND=22;
	public static readonly HASH=23;
	public static readonly COLONCOLON=24;
	public static readonly PLUS=25;
	public static readonly TIMES=26;
	public static readonly DIV=27;
	public static readonly MINUS=28;
	public static readonly PERC=29;
	public static readonly UrlStart=30;
	public static readonly EQEQ=31;
	public static readonly NOTEQ=32;
	public static readonly EQ=33;
	public static readonly PIPE_EQ=34;
	public static readonly TILD_EQ=35;
	public static readonly MIXIN=36;
	public static readonly FUNCTION=37;
	public static readonly EXTEND=38;
	public static readonly IMPLEMENT=39;
	public static readonly AT_ELSE=40;
	public static readonly IF=41;
	public static readonly AT_IF=42;
	public static readonly AT_FOR=43;
	public static readonly AT_WHILE=44;
	public static readonly AT_EACH=45;
	public static readonly INCLUDE=46;
	public static readonly IMPORT=47;
	public static readonly COMPONENT=48;
	public static readonly RETURN=49;
	public static readonly FROM=50;
	public static readonly THROUGH=51;
	public static readonly POUND_DEFAULT=52;
	public static readonly Identifier=53;
	public static readonly StringLiteral=54;
	public static readonly Number=55;
	public static readonly Color=56;
	public static readonly WS=57;
	public static readonly SL_COMMENT=58;
	public static readonly COMMENT=59;
	public static readonly UrlEnd=60;
	public static readonly Url=61;
	public static readonly SPACE=62;
	public static readonly InterpolationStartAfter=63;
	public static readonly IdentifierAfter=64;
	public static readonly RULE_stylesheet = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_params = 2;
	public static readonly RULE_param = 3;
	public static readonly RULE_variableName = 4;
	public static readonly RULE_paramOptionalValue = 5;
	public static readonly RULE_mixinDeclaration = 6;
	public static readonly RULE_includeDeclaration = 7;
	public static readonly RULE_emptyListDeclaration = 8;
	public static readonly RULE_mapDeclaration = 9;
	public static readonly RULE_mapPropertyStatement = 10;
	public static readonly RULE_listDeclaration = 11;
	public static readonly RULE_listOrMap = 12;
	public static readonly RULE_functionDeclaration = 13;
	public static readonly RULE_functionBody = 14;
	public static readonly RULE_functionReturn = 15;
	public static readonly RULE_functionStatement = 16;
	public static readonly RULE_commandStatement = 17;
	public static readonly RULE_mathCharacter = 18;
	public static readonly RULE_mathStatement = 19;
	public static readonly RULE_expression = 20;
	public static readonly RULE_ifDeclaration = 21;
	public static readonly RULE_elseIfStatement = 22;
	public static readonly RULE_elseStatement = 23;
	public static readonly RULE_conditions = 24;
	public static readonly RULE_condition = 25;
	public static readonly RULE_variableDeclaration = 26;
	public static readonly RULE_forDeclaration = 27;
	public static readonly RULE_fromNumber = 28;
	public static readonly RULE_throughNumber = 29;
	public static readonly RULE_whileDeclaration = 30;
	public static readonly RULE_eachDeclaration = 31;
	public static readonly RULE_eachValueList = 32;
	public static readonly RULE_importDeclaration = 33;
	public static readonly RULE_referenceUrl = 34;
	public static readonly RULE_mediaTypes = 35;
	public static readonly RULE_nested = 36;
	public static readonly RULE_nest = 37;
	public static readonly RULE_ruleset = 38;
	public static readonly RULE_block = 39;
	public static readonly RULE_selectors = 40;
	public static readonly RULE_selector = 41;
	public static readonly RULE_selectorPrefix = 42;
	public static readonly RULE_module = 43;
	public static readonly RULE_element = 44;
	public static readonly RULE_pseudo = 45;
	public static readonly RULE_attrib = 46;
	public static readonly RULE_attribRelate = 47;
	public static readonly RULE_identifier = 48;
	public static readonly RULE_identifierPart = 49;
	public static readonly RULE_identifierVariableName = 50;
	public static readonly RULE_property = 51;
	public static readonly RULE_values = 52;
	public static readonly RULE_url = 53;
	public static readonly RULE_measurement = 54;
	public static readonly RULE_argumentsStatement = 55;
	public static readonly RULE_functionCall = 56;
	public static readonly ruleNames: string[] = [
		"stylesheet", "statement", "params", "param", "variableName", "paramOptionalValue", 
		"mixinDeclaration", "includeDeclaration", "emptyListDeclaration", "mapDeclaration", 
		"mapPropertyStatement", "listDeclaration", "listOrMap", "functionDeclaration", 
		"functionBody", "functionReturn", "functionStatement", "commandStatement", 
		"mathCharacter", "mathStatement", "expression", "ifDeclaration", "elseIfStatement", 
		"elseStatement", "conditions", "condition", "variableDeclaration", "forDeclaration", 
		"fromNumber", "throughNumber", "whileDeclaration", "eachDeclaration", 
		"eachValueList", "importDeclaration", "referenceUrl", "mediaTypes", "nested", 
		"nest", "ruleset", "block", "selectors", "selector", "selectorPrefix", 
		"module", "element", "pseudo", "attrib", "attribRelate", "identifier", 
		"identifierPart", "identifierVariableName", "property", "values", "url", 
		"measurement", "argumentsStatement", "functionCall"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'null'", "'in'", undefined, undefined, "'...'", undefined, 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'>'", "'~'", "'<'", "':'", 
		"';'", "','", "'.'", "'$'", "'@'", "'&'", "'#'", "'::'", "'+'", "'*'", 
		"'/'", "'-'", "'%'", undefined, "'=='", "'!='", "'='", "'|='", "'~='", 
		"'@mixin'", "'@function'", "'@extend'", "'@implement'", "'@else'", "'if'", 
		"'@if'", "'@for'", "'@while'", "'@each'", "'@include'", "'@import'", "'@component'", 
		"'@return'", "'from'", "'through'", "'!default'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, "NULL", "IN", "Unit", "COMBINE_COMPARE", "Ellipsis", "InterpolationStart", 
		"LPAREN", "RPAREN", "BlockStart", "BlockEnd", "LBRACK", "RBRACK", "GT", 
		"TIL", "LT", "COLON", "SEMI", "COMMA", "DOT", "DOLLAR", "AT", "AND", "HASH", 
		"COLONCOLON", "PLUS", "TIMES", "DIV", "MINUS", "PERC", "UrlStart", "EQEQ", 
		"NOTEQ", "EQ", "PIPE_EQ", "TILD_EQ", "MIXIN", "FUNCTION", "EXTEND", "IMPLEMENT", 
		"AT_ELSE", "IF", "AT_IF", "AT_FOR", "AT_WHILE", "AT_EACH", "INCLUDE", 
		"IMPORT", "COMPONENT", "RETURN", "FROM", "THROUGH", "POUND_DEFAULT", "Identifier", 
		"StringLiteral", "Number", "Color", "WS", "SL_COMMENT", "COMMENT", "UrlEnd", 
		"Url", "SPACE", "InterpolationStartAfter", "IdentifierAfter"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ModParser._LITERAL_NAMES, ModParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return ModParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "ModParser.g4"; }

	@Override
	public get ruleNames(): string[] { return ModParser.ruleNames; }

	@Override
	public get serializedATN(): string { return ModParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ModParser._ATN, this);
	}
	@RuleVersion(0)
	public stylesheet(): StylesheetContext {
		let _localctx: StylesheetContext = new StylesheetContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ModParser.RULE_stylesheet);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ModParser.InterpolationStart) | (1 << ModParser.DOT) | (1 << ModParser.DOLLAR) | (1 << ModParser.AT) | (1 << ModParser.AND) | (1 << ModParser.HASH) | (1 << ModParser.TIMES))) !== 0) || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (ModParser.MIXIN - 36)) | (1 << (ModParser.FUNCTION - 36)) | (1 << (ModParser.AT_IF - 36)) | (1 << (ModParser.AT_FOR - 36)) | (1 << (ModParser.AT_WHILE - 36)) | (1 << (ModParser.AT_EACH - 36)) | (1 << (ModParser.INCLUDE - 36)) | (1 << (ModParser.IMPORT - 36)) | (1 << (ModParser.Identifier - 36)))) !== 0)) {
				{
				{
				this.state = 114;
				this.statement();
				}
				}
				this.state = 119;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ModParser.RULE_statement);
		try {
			this.state = 131;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ModParser.IMPORT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 120;
				this.importDeclaration();
				}
				break;
			case ModParser.AT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 121;
				this.nested();
				}
				break;
			case ModParser.InterpolationStart:
			case ModParser.DOT:
			case ModParser.AND:
			case ModParser.HASH:
			case ModParser.TIMES:
			case ModParser.Identifier:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 122;
				this.ruleset();
				}
				break;
			case ModParser.MIXIN:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 123;
				this.mixinDeclaration();
				}
				break;
			case ModParser.FUNCTION:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 124;
				this.functionDeclaration();
				}
				break;
			case ModParser.DOLLAR:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 125;
				this.variableDeclaration();
				}
				break;
			case ModParser.INCLUDE:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 126;
				this.includeDeclaration();
				}
				break;
			case ModParser.AT_IF:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 127;
				this.ifDeclaration();
				}
				break;
			case ModParser.AT_FOR:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 128;
				this.forDeclaration();
				}
				break;
			case ModParser.AT_WHILE:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 129;
				this.whileDeclaration();
				}
				break;
			case ModParser.AT_EACH:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 130;
				this.eachDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public params(): ParamsContext {
		let _localctx: ParamsContext = new ParamsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ModParser.RULE_params);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.param();
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===ModParser.COMMA) {
				{
				{
				this.state = 134;
				this.match(ModParser.COMMA);
				this.state = 135;
				this.param();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ModParser.Ellipsis) {
				{
				this.state = 141;
				this.match(ModParser.Ellipsis);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public param(): ParamContext {
		let _localctx: ParamContext = new ParamContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ModParser.RULE_param);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.variableName();
			this.state = 146;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ModParser.COLON) {
				{
				this.state = 145;
				this.paramOptionalValue();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public variableName(): VariableNameContext {
		let _localctx: VariableNameContext = new VariableNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ModParser.RULE_variableName);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.match(ModParser.DOLLAR);
			this.state = 149;
			this.match(ModParser.Identifier);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public paramOptionalValue(): ParamOptionalValueContext {
		let _localctx: ParamOptionalValueContext = new ParamOptionalValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ModParser.RULE_paramOptionalValue);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(ModParser.COLON);
			this.state = 153; 
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 152;
				this.expression();
				}
				}
				this.state = 155; 
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ( (((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ModParser.NULL) | (1 << ModParser.InterpolationStart) | (1 << ModParser.LPAREN) | (1 << ModParser.LBRACK) | (1 << ModParser.DOT) | (1 << ModParser.DOLLAR) | (1 << ModParser.HASH) | (1 << ModParser.PLUS) | (1 << ModParser.TIMES) | (1 << ModParser.DIV) | (1 << ModParser.MINUS) | (1 << ModParser.PERC) | (1 << ModParser.UrlStart))) !== 0) || ((((_la - 53)) & ~0x1F) === 0 && ((1 << (_la - 53)) & ((1 << (ModParser.Identifier - 53)) | (1 << (ModParser.StringLiteral - 53)) | (1 << (ModParser.Number - 53)) | (1 << (ModParser.Color - 53)))) !== 0) );
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public mixinDeclaration(): MixinDeclarationContext {
		let _localctx: MixinDeclarationContext = new MixinDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ModParser.RULE_mixinDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			this.match(ModParser.MIXIN);
			this.state = 158;
			this.match(ModParser.Identifier);
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===ModParser.LPAREN) {
				{
				this.state = 159;
				this.match(ModParser.LPAREN);
				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===ModParser.DOLLAR) {
					{
					this.state = 160;
					this.params();
					}
				}

				this.state = 163;
				this.match(ModParser.RPAREN);
				}
			}

			this.state = 166;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public includeDeclaration(): IncludeDeclarationContext {
		let _localctx: IncludeDeclarationContext = new IncludeDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ModParser.RULE_includeDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.match(ModParser.INCLUDE);
			this.state = 169;
			this.match(ModParser.Identifier);
			this.state = 184;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ModParser.SEMI:
				{
				this.state = 170;
				this.match(ModParser.SEMI);
				}
				break;
			case ModParser.NULL:
			case ModParser.InterpolationStart:
			case ModParser.LPAREN:
			case ModParser.BlockStart:
			case ModParser.BlockEnd:
			case ModParser.LBRACK:
			case ModParser.DOT:
			case ModParser.DOLLAR:
			case ModParser.AT:
			case ModParser.AND:
			case ModParser.HASH:
			case ModParser.PLUS:
			case ModParser.TIMES:
			case ModParser.DIV:
			case ModParser.MINUS:
			case ModParser.PERC:
			case ModParser.UrlStart:
			case ModParser.MIXIN:
			case ModParser.FUNCTION:
			case ModParser.EXTEND:
			case ModParser.IMPLEMENT:
			case ModParser.AT_IF:
			case ModParser.AT_FOR:
			case ModParser.AT_WHILE:
			case ModParser.AT_EACH:
			case ModParser.INCLUDE:
			case ModParser.IMPORT:
			case ModParser.RETURN:
			case ModParser.Identifier:
			case ModParser.StringLiteral:
			case ModParser.Number:
			case ModParser.Color:
				{
				this.state = 179;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input,10,this._ctx) ) {
				case 1:
					{
					this.state = 171;
					this.match(ModParser.LPAREN);
					this.state = 173;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ModParser.NULL) | (1 << ModParser.InterpolationStart) | (1 << ModParser.LPAREN) | (1 << ModParser.LBRACK) | (1 << ModParser.DOT) | (1 << ModParser.DOLLAR) | (1 << ModParser.HASH) | (1 << ModParser.PLUS) | (1 << ModParser.TIMES) | (1 << ModParser.DIV) | (1 << ModParser.MINUS) | (1 << ModParser.PERC) | (1 << ModParser.UrlStart))) !== 0) || ((((_la - 53)) & ~0x1F) === 0 && ((1 << (_la - 53)) & ((1 << (ModParser.Identifier - 53)) | (1 << (ModParser.StringLiteral - 53)) | (1 << (ModParser.Number - 53)) | (1 << (ModParser.Color - 53)))) !== 0)) {
						{
						this.state = 172;
						this.values();
						}
					}

					this.state = 175;
					this.match(ModParser.RPAREN);
					this.state = 177;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===ModParser.SEMI) {
						{
						this.state = 176;
						this.match(ModParser.SEMI);
						}
					}

					}
					break;
				}
				this.state = 182;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===ModParser.BlockStart) {
					{
					this.state = 181;
					this.block();
					}
				}
